--- a/BlazorWASM/BlazorWASM.csproj
+++ b/BlazorWASM/BlazorWASM.csproj
@@ -8,8 +8,9 @@
 
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.Components" Version="6.0.8" />
+        <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="6.0.8" />
         <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.8" />
-        <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="6.0.8" />
+        <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="7.0.0" />
         <PackageReference Include="Radzen.Blazor" Version="4.3.9" />
         <PackageReference Include="Syncfusion.Blazor" Version="20.3.0.58" />
         <PackageReference Include="Syncfusion.Blazor.Themes" Version="20.3.0.58" />
